--- a/app/proconarumbills/webapp/view/CreateRequest.view.xml
+++ b/app/proconarumbills/webapp/view/CreateRequest.view.xml
@@ -100,9 +100,9 @@
                                         </OverflowToolbar>
                                     </headerToolbar>
                                     <columns>
-                                        <Column id="activityNo" width="7%" hAlign="Left" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
+                                        <!-- <Column id="activityNo" width="7%" hAlign="Left" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
                                             <Text id="Title11" text="No" class="fontWeightBold" />
-                                        </Column>
+                                        </Column> -->
 
                                         <Column id="supplierId" hAlign="Begin" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
                                             <Text id="Title12" text="Item Description" class="fontWeightBold" />
@@ -111,6 +111,7 @@
                                         <Column id="supplierName" hAlign="Begin" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
                                             <Text id="Title13" text="Amount" class="fontWeightBold" />
                                         </Column>
+
                                         <Column id="activityPriorityId" hAlign="Begin" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
                                             <Text id="Title14" text="Item Category" class="fontWeightBold" />
                                         </Column>
@@ -126,89 +127,20 @@
                                         <Column id="submittedSteps" hAlign="End" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
                                             <Text id="Title17" text="Remark" class="fontWeightBold" />
                                         </Column>
-
-                                        <Column id="riskTypeId"  width="10%" hAlign="Begin" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
-                                            <Text id="Title19" text="{i18n>activityListRiskTypeCol}" class="fontWeightBold" />
-                                        </Column>
-
-                                        <Column id="activityTypeId" hAlign="Begin" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
-                                            <Text id="Title20" text="{i18n>activityListActivityTypeIdCol}" class="fontWeightBold" />
-                                        </Column>
-
-                                        <Column id="startDate" hAlign="Begin" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
-                                            <Text id="Title21" text="{i18n>activityListStartDateCol}" class="fontWeightBold" />
-                                        </Column>
-
-                                        <Column id="endDate" hAlign="Begin" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
-                                            <Text id="Title22" text="{i18n>activityListEndDateCol}" class="fontWeightBold" />
-                                        </Column>
-
-                                        <Column id="coordinatorId" hAlign="Begin" vAlign="Middle" minScreenWidth="Desktop" demandPopin="true">
-                                            <Text id="Title23" text="{i18n>activityListCoordinatedByCol}" class="fontWeightBold" />
-                                        </Column>
                                     </columns>
 
                                     <items>
-                                        <ColumnListItem id="columnListItemActivity" type="Navigation" press="onItemPressed">
-                                            <cells>
-                                                <Text id="textActivityNo" text="{path: 'auditScoreItemModel>activityNo', type: 'sap.ui.model.odata.type.String'}" />
-                                                <Text id="textSupplierId" text="{path:'auditScoreItemModel>supplierId', formatter:'.formatter.fnFormatSupplierId'}" />
-                                                <Text id="textSupplierName" text="{auditScoreItemModel>supplierName}" />
-                                                <ObjectStatus id="objectPriority1" text="{auditScoreItemModel>activityPriorityText}" 
-                                                    state="{path:'auditScoreItemModel>activityPriorityId', formatter:'.formatter.getActivityPriorityState'}" />
-                                                <ObjectStatus id="objectStatus1" text="{auditScoreItemModel>statusText}" 
-                                                    state="{path:'auditScoreItemModel>statusId', formatter:'.formatter.getActivityStatusState'}" />
-                                                <Text id="textPendingSteps" text="{auditScoreItemModel>pendingSteps}" />
-                                                <Text id="textSubmittedSteps" text="{auditScoreItemModel>submittedSteps}" />
-                                                <Text id="textRiskType" text="{auditScoreItemModel>riskTypeText}" />
-                                                <Text id="textActivityType" text="{auditScoreItemModel>activityTypeText}" />
-                                                <Text id="textStartDate" text="{
-                                                    path: 'auditScoreItemModel>startDate',
-                                                    type: 'sap.ui.model.type.Date',
-                                                    formatOptions:{
-                                                        source: {
-                                                            pattern: 'yyyy-MM-ddTHH:mm:ss.sssZ'
-                                                        },
-                                                        UTC: true
-                                                    } 
-                                                }" />
-                                            <!-- //#170225-kiennt-Ticket521 - correct german date format -->
-                                            <!-- <Text text="{
-                                            path: 'auditScoreItemModel>startDate',
-                                            type: 'sap.ui.model.odata.type.DateTimeOffset',
-                                            constraints: {
-                                                precision: 3,
-                                                v4: true
-                                            },
-                                            formatOptions: {
-                                                pattern: 'yyyy/MM/dd'
-                                            }
-                                            }" /> -->
-                                            <Text id="Title24" text="{
-                                                path: 'auditScoreItemModel>endDate',
-                                                type: 'sap.ui.model.type.Date',
-                                                formatOptions:{
-                                                    source: {
-                                                        pattern: 'yyyy-MM-ddTHH:mm:ss.sssZ'
-                                                    },
-                                                    UTC: true
-                                                } 
-                                            }" />
-                                            <!-- //#170225-kiennt-Ticket521 - correct german date format -->
-                                            <!-- <Text text="{
-                                            path: 'auditScoreItemModel>endDate',
-                                            type: 'sap.ui.model.odata.type.DateTimeOffset',
-                                            constraints: {
-                                                precision: 3,
-                                                v4: true
-                                            },
-                                            formatOptions: {
-                                                pattern: 'yyyy/MM/dd'
-                                            }
-                                            }" /> -->
-                                                <Text id="Title25" text="{auditScoreItemModel>coordinatorName}" />
-                                            </cells>
-                                        </ColumnListItem>
+                                    <ColumnListItem id="columnListItemActivity">
+                                        <cells>
+                                            <!-- <Input id="_IDGenInput" value="{ExpenseItems>Id}" /> -->
+                                            <Input id="_IDGenInput1" value="{ExpenseItems>description}" />
+                                            <Input id="_IDGenInput2" value="{ExpenseItems>category}" />
+                                            <DatePicker id="_IDGenDatePicker" value="{ExpenseItems>billDate}" displayFormat="yyyy-MM-dd" />
+                                            <Input id="_IDGenInput3" value="{ExpenseItems>paymentMethod}" />
+                                            <Input id="_IDGenInput4" value="{ExpenseItems>ammount}" />
+                                            <Input id="_IDGenInput5" value="{ExpenseItems>remark}" />
+                                        </cells>
+                                    </ColumnListItem>
                                     </items>
                                 </Table>
                             </uxap:ObjectPageSubSection>
